// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders default styling 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c-table__row__cell c0"
  data-garden-id="tables.cell"
  data-garden-version="version"
  role="gridcell"
/>
`;

exports[`Cell renders menu styling if provided 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c-table__row__cell c-table__row__cell--overflow c0"
  data-garden-id="tables.cell"
  data-garden-version="version"
  role="gridcell"
/>
`;

exports[`Cell renders minimum styling if provided 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c-table__row__cell c-table__row__cell--min c0"
  data-garden-id="tables.cell"
  data-garden-version="version"
  role="gridcell"
/>
`;

exports[`Cell renders truncation styling if provided 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c-table__row__cell c-table__row__cell--truncate c0"
  data-garden-id="tables.cell"
  data-garden-version="version"
  role="gridcell"
/>
`;
